--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 				padding: 0;
 				margin: 0;
 			}
-			body {
-				min-height: 500px;
-			}
+			
 			
 			#wrapper {
 				background:#3914af;
@@ -199,6 +197,13 @@
 		</div>
 	</div>
 </div>
+<div class="container mobilewrapper">
+	<div class="row">
+		<div class="twelvecol last">							
+					<img src="img/building1.jpg" alt="building1"/>				
+		</div>
+	</div>
+</div>
 
 
 
@@ -238,16 +243,16 @@
 <div class="container social">
 	<div class="row">
 		<div class="threecol">
-			<p>Facebook</p>
+			<img src="facebook.png"  width="60px"/>
 		</div>
 		<div class="threecol">
-			<p>Twitter</p>
+			<img src="twitter.png"  width="60px"/>
 		</div>
 		<div class="threecol">
-			<p>Google Plus</p>
+			<img src="flickr.png" width="60px"/>
 		</div>
 		<div class="threecol last">
-			<p>Another one!</p>
+			<img src="rss.png"  width="60px"/>
 		</div>
 	</div>
 </div>
